--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,6 +18,7 @@
     --container-color: #fff;
     --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
     --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
+    --cc-icon-bg: white;
 
     --body-font: 'Poppins', sans-serif;
 
@@ -69,6 +70,7 @@ body.dark-theme{
     --container-color: hsl(var(--hue-color), 29%, 16%);
     --scroll-bar-color: hsl(var(--hue-color), 12%, 40%);
     --scroll-thumb-color: hsl(var(--hue-color), 12%, 30%);
+    --cc-icon-bg: wheat;
 }
 
 /*========== Button Dark/Light ==========*/
@@ -263,7 +265,7 @@ img{
     grid-column: 1/3;
 }
 .home__title{
-    font-size: var(--big-font-size);
+    font-size: var(--h1-font-size);
 }
 .home__subtitle{
     font-size: var(--h3-font-size);
@@ -362,6 +364,20 @@ img{
 .about__buttons{
     display: flex;
     justify-content: center;
+}
+.cc{
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 2rem;
+}
+.cc>div>a>img{
+    min-width: 2rem ; 
+    max-height: 2rem;
+}
+.cc>div{
+    background-color: var(--cc-icon-bg);
+    padding: .5rem;
+    border-radius: 0 10px 0 10px;
 }
 
 /*==================== SKILLS ====================*/
@@ -462,7 +478,7 @@ img{
     margin-right: var(--mb-0-25);
 }
 .qualification__data{
-    display: grid;
+    display: grid ; 
     grid-template-columns: 1fr max-content 1fr;
     column-gap: 1.5rem;
 }
